--- a/csASPNETSudoku3_1/wwwroot/css/site.css
+++ b/csASPNETSudoku3_1/wwwroot/css/site.css
@@ -70,7 +70,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.input_box {
+.input-box {
     width: 25px;
     box-shadow: none;
     border-top-style: groove;
