--- a/csASPNETSudoku3_1/Views/Sudoku/FinishedSudoku.cshtml
+++ b/csASPNETSudoku3_1/Views/Sudoku/FinishedSudoku.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Sudoku
 
-<h2>Game in Play</h2>
+<h2>Congratulations You WON!!!!!</h2>
 
 <div class="table"> 
-    @for(var i=0;i<Model.Sudoku_problem.Length;i++)
+    @for(var i=0;i<Model.Sudoku_solution.Length;i++)
     {   
-            String val = ""+Model.Sudoku_problem[i];
+            String val = ""+Model.Sudoku_solution[i];
             if (val == "0") val = new String("");
             String mainClass = "input-box ";
             String right_borderClass = "";
@@ -31,3 +31,4 @@
     }
     
 </div>
+
