--- a/csASPNETSudoku3_1/Views/Sudoku/RedoSudoku.cshtml
+++ b/csASPNETSudoku3_1/Views/Sudoku/RedoSudoku.cshtml
@@ -2,7 +2,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Sudoku</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h2>Please redo your game you got a number wrong</h2>
 </div>
 
 
